# OpenFunnel-GTM

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_location_raw_text.py
backend/app/: main.py
backend/app/api/routes/: debug_queue.py  debug_seed.py  health.py  ingest.py  job_postings.py  jobs.py  orchestrate.py
backend/app/api/schemas/: job.py
backend/app/core/: config.py  logging.py  middleware.py  request_context.py
backend/app/db/: models.py  redis_client.py  session.py
backend/app/db/migrations/: env.py
backend/app/extract/: parse.py  prompts.py  schema.py
backend/app/llm/: high_tier.py  ollama_client.py
backend/app/normalize/: skills.py
backend/app/queue/: redis_queue.py  tasks.py
backend/app/scraper/: greenhouse.py  http.py
backend/app/scripts/: seed_greenhouse.py
backend/app/seed/: greenhouse_companies.txt
backend/app/services/extraction/: json_parse.py  ollama_client.py  prompting.py  schema.py
backend/app/services/scraping/: providers.py
backend/app/services/storage/: job_store.py  run_store.py
backend/app/utils/: hashing.py  raw_store.py
backend/app/workers/: discover_worker.py  extract_worker.py  extractor_worker.py  reaper_worker.py  scrape_worker.py  scraper_worker.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  highlight.ts
