[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project]
name = "openfunnel-takehome"
version = "0.1.0"
description = "Job GTM Intelligence Platform take-home"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy==2.0.36",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.3",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "redis==5.2.0",
  "python-dotenv==1.0.1",
  "rapidfuzz==3.9.7",
  "orjson==3.10.7",
]

[project.optional-dependencies]
dev = [
  "ruff==0.7.0",
  "pytest==8.3.3",
]

[tool.ruff]
line-length = 100
